# Newton-Fractal_ISPC

./: .gitignore  CMakeLists.txt  README.md  image_io.cpp  image_io.h  main.cpp  newton.ispc
